Rebinding split window

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,10 +30,11 @@ set-option -sa terminal-overrides ',*-256color:RGB'
 set-option -g default-shell /bin/zsh
 set -g mouse on
 
-# http://unix.stackexchange.com/a/118381
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-bind c new-window -c "#{pane_current_path}"
+# rebind splitting windows
+unbind-key %
+bind v split-window -h -c "#{pane_current_path}"
+unbind-key s
+bind s split-window -v -c "#{pane_current_path}"
 
 # status bar
 if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -lt 2\) -o #{$TMUX_VERSION_MAJOR} -le 1' 'set-option -g status-utf8 on'
@@ -47,6 +48,9 @@ bind -r C-k resize-pane -U 5
 bind -r C-j resize-pane -D 5
 bind -r C-h resize-pane -L 5
 bind -r C-l resize-pane -R 5
+
+# Auto-renumber windows on closing pane
+set-option -g renumber-windows on
 
 # allow the title bar to adapt to whatever host you connect to
 set -g set-titles on
@@ -64,7 +68,3 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
-
-# Tmuxline
-# source-file ~/.tmux.powerline.conf
