--- a/.config/i3/config
+++ b/.config/i3/config
@@ -140,6 +140,12 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
+# start applications
+bindsym $mod+F1 exec alacritty
+bindsym $mod+F2 exec brave-browser
+bindsym $mod+F3 exec google-chrome
+bindsym $mod+F4 exec spotify
+
 # assign app to chosen workspace
 assign [class="Alacritty"] $ws1
 assign [class="Brave-browser"] $ws2
@@ -203,9 +209,6 @@ bindsym $mod+y mode "$mode_system"
 
 # Lock screen
 bindsym $mod+Shift+x exec i3lock -c 6d4675
-
-# Lock screen
-bindsym $mod+Shift+x exec i3lock
 
 # Pulse Audio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
