--- a/.config/i3/config
+++ b/.config/i3/config
@@ -31,7 +31,7 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
 
 # Enable tranparent
-exec_always compton -f -m 0.8
+exec_always compton -f
 
 # Set backgroud
 exec_always nitrogen --restore
@@ -189,8 +189,10 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3blocks -c ~/.config/i3/i3blocks.conf
+        status_command i3blocks
+        # status_command i3status -c ~/.config/i3/i3status.conf
         position top
+        font pango:CaskaydiaCove Nerd Font 9
 }
 
 set $mode_system System (l) lock, (e) logout, (r) reboot, (Shift+s) shutdown
