--- a/.config/i3/config
+++ b/.config/i3/config
@@ -13,7 +13,8 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+# font pango:monospace 8
+font pango:CaskaydiaCove Nerd Font 9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -189,10 +190,10 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3blocks
-        # status_command i3status -c ~/.config/i3/i3status.conf
+        # status_command i3blocks
+        status_command i3status | python3 ~/.config/i3status/scripts/i3spotifystatus/pystatus.py
         position top
-        font pango:CaskaydiaCove Nerd Font 9
+        font pango:CaskaydiaCove Nerd Font 10
 }
 
 set $mode_system System (l) lock, (e) logout, (r) reboot, (Shift+s) shutdown
