--- a/.config/i3/config
+++ b/.config/i3/config
@@ -191,9 +191,10 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bar {
         # status_command i3blocks
-        status_command i3status | python3 ~/.config/i3status/scripts/i3spotifystatus/pystatus.py
+        # status_command i3status | python3 ~/.config/i3status/scripts/i3spotifystatus/pystatus.py
+        status_command ~/.cargo/bin/i3status-rs
         position top
-        font pango:CaskaydiaCove Nerd Font 10
+        font pango:CaskaydiaCove Nerd Font, FontAwesome 10
 
         colors {
             background #282828
@@ -224,9 +225,9 @@ bindsym $mod+y mode "$mode_system"
 bindsym $mod+Shift+x exec i3lock -c 6d4675
 
 # Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% #increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% #decrease sound volume
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle # mute sound
 
 # Sreen brightness controls
 bindsym XF86MonBrightnessUp exec light -A 5 # increase screen brightness
