Disable tmux scroll when enter cli apps

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,6 +30,18 @@ set-option -sa terminal-overrides ',*-256color:RGB'
 set-option -g default-shell /bin/zsh
 set -g mouse on
 
+bind-key -T root WheelUpPane \
+	if-shell -Ft= '#{?mouse_any_flag,1,#{pane_in_mode}}' \
+		'send -Mt=' \
+		'if-shell -t= "#{?alternate_on,true,false} || echo \"#{tmux_commands_with_legacy_scroll}\" | grep -q \"#{pane_current_command}\"" \
+			"send -t= Up" "copy-mode -et="'
+
+bind-key -T root WheelDownPane \
+	if-shell -Ft = '#{?pane_in_mode,1,#{mouse_any_flag}}' \
+		'send -Mt=' \
+		'if-shell -t= "#{?alternate_on,true,false} || echo \"#{tmux_commands_with_legacy_scroll}\" | grep -q \"#{pane_current_command}\"" \
+			"send -t= Down" "send -Mt="'
+
 # rebind splitting windows
 unbind-key %
 bind v split-window -h -c "#{pane_current_path}"
@@ -59,12 +71,7 @@ set -g set-titles-string "#T"
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
-
-# set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
