--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,5 +1,6 @@
 env:
   WINIT_X11_SCALE_FACTOR: "1.0"
+  TERM: "alacritty"
 
 # Window Customization
 window:
@@ -13,7 +14,7 @@ window:
   dynamic_padding: true
   # decorations: none
   dynamic_title: true
-  opacity: 0.9
+  opacity: 0.8
   startup_mode: Maximized
 
 # Scroll Customization
@@ -25,7 +26,7 @@ scrolling:
 font:
   normal:
     family: "JetBrainsMono Nerd Font"
-  size: 10
+  size: 12
   offset:
     x: 0
     y: 0
@@ -34,112 +35,37 @@ font:
     y: 0
   debug:
     persistent_logging: false
-  scale_with_dpi: false
+  scale_with_dpi: true
 draw_bold_text_with_bright_colors: true
 
-schemes:
-  # Colors (Gruvbox dark)
-  gruvbox_dark:
-    primary:
-      # hard contrast: background = '#1d2021'
-      background: "#282828"
-      # soft contrast: background = '#32302f'
-      foreground: "#ebdbb2"
-
-    # Normal colors
-    normal:
-      black: "#282828"
-      red: "#cc241d"
-      green: "#98971a"
-      yellow: "#d79921"
-      blue: "#458588"
-      magenta: "#b16286"
-      cyan: "#689d6a"
-      white: "#a89984"
-
-    # Bright colors
-    bright:
-      black: "#928374"
-      red: "#fb4934"
-      green: "#b8bb26"
-      yellow: "#fabd2f"
-      blue: "#83a598"
-      magenta: "#d3869b"
-      cyan: "#8ec07c"
-      white: "#ebdbb2"
-
-  # Colors (One Dark)
-  onedark:
-    primary:
-      foreground: "0xabb2bf"
-      background: "0x282c34"
-
-    # Cursor colors
-    cursor:
-      text: "0x5c6370"
-      cursor: "0xabb2bf"
-
-    # Normal colors
-    normal:
-      black: "0x5c6370"
-      red: "0xe06c75"
-      green: "0x98c379"
-      yellow: "0xe5c07b"
-      blue: "0x61afef"
-      magenta: "0xc678dd"
-      cyan: "0x56b6c2"
-      white: "0xabb2bf"
-
-    # Bright colors
-    bright:
-      black: "0x4b5263"
-      red: "0xbe5046"
-      green: "0x98c379"
-      yellow: "0xd19a66"
-      blue: "0x61afef"
-      magenta: "0xc678dd"
-      cyan: "0x56b6c2"
-      white: "0x3e4452"
-
-# Colorschemes
 colors:
-  name: 3024 (dark)
-  author: Chris Kempson
   primary:
-    background: "0x282c34"
-    foreground: "0xabb2bf"
-
-  # Colors the cursor will use if `custom_cursor_colors` is true
-  cursor:
-    text: "0x282c34"
-    cursor: "0xabb2bf"
+    background: '0x000000'
+    # background: '0x1a1b26'
+    foreground: '0xc0caf5'
 
   # Normal colors
   normal:
-    black: "0x282c34"
-    red: "0xe06c75"
-    green: "0x98c379"
-    yellow: "0xe5c07b"
-    blue: "0x61afef"
-    magenta: "0xc678dd"
-    cyan: "0x56b6c2"
-    white: "0xabb2bf"
+    black:   '0x15161e'
+    red:     '0xf7768e'
+    green:   '0x9ece6a'
+    yellow:  '0xe0af68'
+    blue:    '0x7aa2f7'
+    magenta: '0xbb9af7'
+    cyan:    '0x7dcfff'
+    white:   '0xa9b1d6'
 
   # Bright colors
   bright:
-    black: "0x545862"
-    red: "0xd19a66"
-    green: "0x353b45"
-    yellow: "0x3e4451"
-    blue: "0x565c64"
-    magenta: "0xb6bdca"
-    cyan: "0xbe5046"
-    white: "0xc8ccd4"
+    black:   '0x414868'
+    red:     '0xf7768e'
+    green:   '0x9ece6a'
+    yellow:  '0xe0af68'
+    blue:    '0x7aa2f7'
+    magenta: '0xbb9af7'
+    cyan:    '0x7dcfff'
+    white:   '0xc0caf5'
 
   indexed_colors:
-    - { index: 16, color: "0xd19a66" }
-    - { index: 17, color: "0xbe5046" }
-    - { index: 18, color: "0x353b45" }
-    - { index: 19, color: "0x3e4451" }
-    - { index: 20, color: "0x565c64" }
-    - { index: 21, color: "0xb6bdca" }
+    - { index: 16, color: '0xff9e64' }
+    - { index: 17, color: '0xdb4b4b' }
