--- a/.config/i3/config
+++ b/.config/i3/config
@@ -14,7 +14,7 @@ set $mod Mod4
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 # font pango:monospace 8
-font pango:CaskaydiaCove Nerd Font 9
+font pango:FiraCode Nerd Font 9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -35,14 +35,15 @@ exec --no-startup-id nm-applet
 exec_always compton -f
 
 # Set backgroud
-exec_always nitrogen --restore
+# exec_always nitrogen --restore
+exec_always --no-startup-id ~/.fehbg
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 # start a terminal
-# bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec i3-sensible-terminal
+# bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -112,7 +113,7 @@ set $ws1 "1: Terminal"
 set $ws2 "2: Entertainment"
 set $ws3 "3: Learn"
 set $ws4 "4: Spotify"
-set $ws5 "5"
+set $ws5 "5: Work"
 set $ws6 "6"
 set $ws7 "7"
 set $ws8 "8"
@@ -144,13 +145,13 @@ bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
 # start applications
-bindsym $mod+F1 exec alacritty
+bindsym $mod+F1 exec i3-sensible-terminal
 bindsym $mod+F2 exec brave-browser
 bindsym $mod+F3 exec google-chrome
 bindsym $mod+F4 exec spotify
 
 # assign app to chosen workspace
-assign [class="Alacritty"] $ws1
+assign [class="Xfce4-terminal"] $ws1
 assign [class="Brave-browser"] $ws2
 assign [class="Google-chrome"] $ws3
 for_window [class="Spotify"] move to workspace $ws4
@@ -189,14 +190,21 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+# class                 border  bground text    indicator child_border
+client.focused          #83CAFA #51A2DA #FFFFFF #83CAFA   #51A2DA
+client.focused_inactive #8C8C8C #4C4C4C #FFFFFF #4C4C4C   #8C8C8C
+client.unfocused        #4C4C4C #222222 #888888 #292D2E   #222222
+client.urgent           #EC69A0 #DB3279 #FFFFFF #DB3279   #DB3279
+client.placeholder      #000000 #0C0C0C #FFFFFF #000000   #0C0C0C
+
+client.background       #FFFFFF
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        # status_command i3blocks
-        # status_command i3status | python3 ~/.config/i3status/scripts/i3spotifystatus/pystatus.py
         status_command ~/.cargo/bin/i3status-rs
         position top
-        font pango:CaskaydiaCove Nerd Font, FontAwesome 10
+        font pango:FiraCode Nerd Font, FontAwesome 10
 
         colors {
             background #282828
@@ -232,8 +240,10 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle # mute sound
 
 # Sreen brightness controls
-bindsym XF86MonBrightnessUp exec light -A 5 # increase screen brightness
-bindsym XF86MonBrightnessDown exec light -U 5 # decrease screen brightness
+# bindsym XF86MonBrightnessUp exec light -A 5 # increase screen brightness
+# bindsym XF86MonBrightnessDown exec light -U 5 # decrease screen brightness
+bindsym XF86MonBrightnessUp exec brightnessctl s +10% # increase screen brightness
+bindsym XF86MonBrightnessDown exec brightnessctl s 10%- # decrease screen brightness
 
 # Media player controls
 bindsym XF86AudioPlay exec playerctl play-pause
