--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,65 +1,12 @@
+unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
-bind -n C-k clear-history
 # Vi copypaste mode
 set-window-option -g mode-keys vi
-set-option -g status-keys vi
-if-shell "test '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -ge 4 \)'" 'bind-key -Tcopy-mode-vi v send -X begin-selection; bind-key -Tcopy-mode-vi y send -X copy-selection-and-cancel'
-if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -lt 4\) -o #{$TMUX_VERSION_MAJOR} -le 1' 'bind-key -t vi-copy v begin-selection; bind-key -t vi-copy y copy-selection'
-
-# Start numbering at 1
-set -g base-index 1
-
-# Allows for faster key repetition
-set -s escape-time 0
-
-unbind [
-#unbind Space
-bind Escape copy-mode
-
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-bind R source-file ~/.tmux.conf \; display-message " Config reloaded.."
-
-set -g default-terminal "tmux-256color"
-set-option -sa terminal-overrides ',*-256color:RGB'
-set-option -g default-shell /bin/zsh
-set -g mouse on
-
-bind-key -T root WheelUpPane \
-	if-shell -Ft= '#{?mouse_any_flag,1,#{pane_in_mode}}' \
-		'send -Mt=' \
-		'if-shell -t= "#{?alternate_on,true,false} || echo \"#{tmux_commands_with_legacy_scroll}\" | grep -q \"#{pane_current_command}\"" \
-			"send -t= Up" "copy-mode -et="'
-
-bind-key -T root WheelDownPane \
-	if-shell -Ft = '#{?pane_in_mode,1,#{mouse_any_flag}}' \
-		'send -Mt=' \
-		'if-shell -t= "#{?alternate_on,true,false} || echo \"#{tmux_commands_with_legacy_scroll}\" | grep -q \"#{pane_current_command}\"" \
-			"send -t= Down" "send -Mt="'
-
-# rebind splitting windows
-unbind-key %
-bind v split-window -h -c "#{pane_current_path}"
-unbind-key s
-bind s split-window -v -c "#{pane_current_path}"
-
-# status bar
-if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -lt 2\) -o #{$TMUX_VERSION_MAJOR} -le 1' 'set-option -g status-utf8 on'
-
-# Moving window
-bind-key -n C-S-Left swap-window -t -1\; select-window -t -1
-bind-key -n C-S-Right swap-window -t +1\; select-window -t +1
-
-# Resizing pane
-bind -r C-k resize-pane -U 5
-bind -r C-j resize-pane -D 5
-bind -r C-h resize-pane -L 5
-bind -r C-l resize-pane -R 5
+set -s set-clipboard off
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -i -selection clipboard"
 
 # Auto-renumber windows on closing pane
 set-option -g renumber-windows on
@@ -68,10 +15,50 @@ set-option -g renumber-windows on
 set -g set-titles on
 set -g set-titles-string "#T"
 
+# Start numbering at 1
+set -g base-index 1
+# Allows for faster key repetition
+set -s escape-time 2
+set -g status-left-length 20
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+bind r source-file ~/.tmux.conf
+
+set-option -ga terminal-overrides ',xterm-256color*:Tc'
+
+bind-key -T root WheelUpPane \
+    if-shell -Ft= '#{?mouse_any_flag,1,#{pane_in_mode}}' \
+        'send -Mt=' \
+        'if-shell -t= "#{?alternate_on,true,false} || echo \"#{tmux_commands_with_legacy_scroll}\" | grep -q \"#{pane_current_command}\"" \
+            "send -t= Up" "copy-mode -et="'
+
+bind-key -T root WheelDownPane \
+    if-shell -Ft = '#{?pane_in_mode,1,#{mouse_any_flag}}' \
+        'send -Mt=' \
+        'if-shell -t= "#{?alternate_on,true,false} || echo \"#{tmux_commands_with_legacy_scroll}\" | grep -q \"#{pane_current_command}\"" \
+            "send -t= Down" "send -Mt="'
+
+# rebind splitting windows
+unbind-key %
+bind v split-window -h -c "#{pane_current_path}"
+unbind-key s
+bind s split-window -v -c "#{pane_current_path}"
+
+# Resizing pane
+bind -r C-k resize-pane -U 5
+bind -r C-j resize-pane -D 5
+bind -r C-h resize-pane -L 5
+bind -r C-l resize-pane -R 5
+
+bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
