--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,18 +1,13 @@
 env:
   WINIT_X11_SCALE_FACTOR: "1.0"
-  TERM: "alacritty"
+  # TERM: "xterm-256color"
 
 # Window Customization
 window:
   dimensions:
     columns: 140
     lines: 38
-  # padding:
-  #   x: 1
-  #   y: 1
-
   dynamic_padding: true
-  # decorations: none
   dynamic_title: true
   opacity: 0.8
   startup_mode: Maximized
@@ -20,28 +15,32 @@ window:
 # Scroll Customization
 scrolling:
   history: 10000
-  multiplier: 3
+  multiplier: 10
 
 # Font Customization
 font:
   normal:
     family: "JetBrainsMono Nerd Font"
+    style: Regular
+  bold:
+    family: "JetBrainsMono Nerd Font"
+    style: Bold
+  italic:
+    family: "JetBrainsMono Nerd Font"
+    style: Italic
+  bold_italic:
+    family: "JetBrainsMono Nerd Font"
+    style: Bold Italic
   size: 12
-  offset:
-    x: 0
-    y: 0
-  glyph_offset:
-    x: 0
-    y: 0
-  debug:
-    persistent_logging: false
   scale_with_dpi: true
+
 draw_bold_text_with_bright_colors: true
 
+# Catpuccin
 colors:
   primary:
-    background: '0x000000'
-    # background: '0x1a1b26'
+    # background: '0x000000'
+    background: '0x1a1b26'
     foreground: '0xc0caf5'
 
   # Normal colors
@@ -69,3 +68,36 @@ colors:
   indexed_colors:
     - { index: 16, color: '0xff9e64' }
     - { index: 17, color: '0xdb4b4b' }
+
+# TokyoNight Alacritty Colors
+# colors:
+#   # Default colors
+#   primary:
+#     background: '0x1a1b26'
+#     foreground: '0xc0caf5'
+
+#   # Normal colors
+#   normal:
+#     black:   '0x15161E'
+#     red:     '0xf7768e'
+#     green:   '0x9ece6a'
+#     yellow:  '0xe0af68'
+#     blue:    '0x7aa2f7'
+#     magenta: '0xbb9af7'
+#     cyan:    '0x7dcfff'
+#     white:   '0xa9b1d6'
+
+#   # Bright colors
+#   bright:
+#     black:   '0x414868'
+#     red:     '0xf7768e'
+#     green:   '0x9ece6a'
+#     yellow:  '0xe0af68'
+#     blue:    '0x7aa2f7'
+#     magenta: '0xbb9af7'
+#     cyan:    '0x7dcfff'
+#     white:   '0xc0caf5'
+
+#   indexed_colors:
+#     - { index: 16, color: '0xff9e64' }
+#     - { index: 17, color: '0xdb4b4b' }
