--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,6 +28,7 @@ bind l select-pane -R
 
 bind r source-file ~/.tmux.conf
 
+set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ',xterm-256color*:Tc'
 
 bind-key -T root WheelUpPane \
