--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,8 +28,10 @@ bind l select-pane -R
 
 bind r source-file ~/.tmux.conf
 
-set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ',xterm-256color*:Tc'
+# set -g default-terminal "xterm-256color"
+# set-option -ga terminal-overrides ',xterm-256color*:Tc'
+set-option -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ',alacritty:RGB'
 
 bind-key -T root WheelUpPane \
     if-shell -Ft= '#{?mouse_any_flag,1,#{pane_in_mode}}' \
