--- a/.config/i3/config
+++ b/.config/i3/config
@@ -13,8 +13,8 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-# font pango:monospace 8
-font pango:FiraCode Nerd Font 9
+# font pango:monospace 9
+font pango:JetBrainsMono Nerd Font 9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -204,7 +204,7 @@ client.background       #FFFFFF
 bar {
         status_command ~/.cargo/bin/i3status-rs
         position top
-        font pango:FiraCode Nerd Font, FontAwesome 10
+        font pango:JetBrainsMono Nerd Font, FontAwesome 10
 
         colors {
             background #282828
@@ -243,7 +243,7 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ to
 # bindsym XF86MonBrightnessUp exec light -A 5 # increase screen brightness
 # bindsym XF86MonBrightnessDown exec light -U 5 # decrease screen brightness
 bindsym XF86MonBrightnessUp exec brightnessctl s +10% # increase screen brightness
-bindsym XF86MonBrightnessDown exec brightnessctl s 10%- # decrease screen brightness
+bindsym XF86MonBrightnessDown exec brightnessctl s 5%- # decrease screen brightness
 
 # Media player controls
 bindsym XF86AudioPlay exec playerctl play-pause
