--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,6 +1,6 @@
 env:
   WINIT_X11_SCALE_FACTOR: "1.0"
-  # TERM: "screen-256color"
+  TERM: "xterm-256color"
 
 # Window Customization
 window:
@@ -11,6 +11,7 @@ window:
   dynamic_title: true
   opacity: 0.8
   startup_mode: Maximized
+  decorations: none
 
 # Scroll Customization
 scrolling:
@@ -19,100 +20,150 @@ scrolling:
 
 # Font Customization
 font:
+  size: 12
   # JetBrains
   normal:
-    # family: "JetBrainsMono Nerd Font"
-    # style: Regular
-  # bold:
-    # family: "JetBrainsMono Nerd Font"
-    # style: Bold
-  # italic:
-    # family: "JetBrainsMono Nerd Font"
-    # style: Italic
-  # bold_italic:
-    # family: "JetBrainsMono Nerd Font"
-    # style: Bold Italic
-
-  # FiraCode
-  normal:
-    family: "FiraCode Nerd Font Mono"
+    family: "JetBrainsMono Nerd Font"
     style: Regular
   bold:
-    family: "FiraCode Nerd Font Mono"
+    family: "JetBrainsMono Nerd Font"
     style: Bold
   italic:
-    family: "FiraCode Nerd Font Mono"
+    family: "JetBrainsMono Nerd Font"
     style: Italic
   bold_italic:
-    family: "FiraCode Nerd Font Mono"
+    family: "JetBrainsMono Nerd Font"
     style: Bold Italic
-  size: 12
-  scale_with_dpi: true
 
-draw_bold_text_with_bright_colors: true
+  # FiraCode
+  # normal:
+  #   family: "FiraCode Nerd Font Mono"
+  #   style: Regular
+  # bold:
+  #   family: "FiraCode Nerd Font Mono"
+  #   style: Bold
+  # italic:
+  #   family: "FiraCode Nerd Font Mono"
+  #   style: Italic
+  # bold_italic:
+  #   family: "FiraCode Nerd Font Mono"
+  #   style: Bold Italic
+  
 
-# Catpuccin
-colors:
-  primary:
-    # background: '0x000000'
-    background: '0x1a1b26'
-    foreground: '0xc0caf5'
+schemes:
+  # Catpuccin
+  catpuccin-mocha: &catpuccin-mocha
+    primary:
+      # background: '0x000000'
+      background: '0x1a1b26'
+      foreground: '0xc0caf5'
 
-  # Normal colors
-  normal:
-    black:   '0x15161e'
-    red:     '0xf7768e'
-    green:   '0x9ece6a'
-    yellow:  '0xe0af68'
-    blue:    '0x7aa2f7'
-    magenta: '0xbb9af7'
-    cyan:    '0x7dcfff'
-    white:   '0xa9b1d6'
+    # Normal colors
+    normal:
+      black:   '0x15161e'
+      red:     '0xf7768e'
+      green:   '0x9ece6a'
+      yellow:  '0xe0af68'
+      blue:    '0x7aa2f7'
+      magenta: '0xbb9af7'
+      cyan:    '0x7dcfff'
+      white:   '0xa9b1d6'
 
-  # Bright colors
-  bright:
-    black:   '0x414868'
-    red:     '0xf7768e'
-    green:   '0x9ece6a'
-    yellow:  '0xe0af68'
-    blue:    '0x7aa2f7'
-    magenta: '0xbb9af7'
-    cyan:    '0x7dcfff'
-    white:   '0xc0caf5'
+    # Bright colors
+    bright:
+      black:   '0x414868'
+      red:     '0xf7768e'
+      green:   '0x9ece6a'
+      yellow:  '0xe0af68'
+      blue:    '0x7aa2f7'
+      magenta: '0xbb9af7'
+      cyan:    '0x7dcfff'
+      white:   '0xc0caf5'
 
-  indexed_colors:
-    - { index: 16, color: '0xff9e64' }
-    - { index: 17, color: '0xdb4b4b' }
+    indexed_colors:
+      - { index: 16, color: '0xff9e64' }
+      - { index: 17, color: '0xdb4b4b' }
 
-# TokyoNight Alacritty Colors
-# colors:
-#   # Default colors
-#   primary:
-#     background: '0x1a1b26'
-#     foreground: '0xc0caf5'
+  # TokyoNight
+  tokyo-night: &tokyo-night
+    # Default colors
+    primary:
+      background: '0x1a1b26'
+      foreground: '0xc0caf5'
 
-#   # Normal colors
-#   normal:
-#     black:   '0x15161E'
-#     red:     '0xf7768e'
-#     green:   '0x9ece6a'
-#     yellow:  '0xe0af68'
-#     blue:    '0x7aa2f7'
-#     magenta: '0xbb9af7'
-#     cyan:    '0x7dcfff'
-#     white:   '0xa9b1d6'
+    # Normal colors
+    normal:
+      black:   '0x15161E'
+      red:     '0xf7768e'
+      green:   '0x9ece6a'
+      yellow:  '0xe0af68'
+      blue:    '0x7aa2f7'
+      magenta: '0xbb9af7'
+      cyan:    '0x7dcfff'
+      white:   '0xa9b1d6'
 
-#   # Bright colors
-#   bright:
-#     black:   '0x414868'
-#     red:     '0xf7768e'
-#     green:   '0x9ece6a'
-#     yellow:  '0xe0af68'
-#     blue:    '0x7aa2f7'
-#     magenta: '0xbb9af7'
-#     cyan:    '0x7dcfff'
-#     white:   '0xc0caf5'
+    # Bright colors
+    bright:
+      black:   '0x414868'
+      red:     '0xf7768e'
+      green:   '0x9ece6a'
+      yellow:  '0xe0af68'
+      blue:    '0x7aa2f7'
+      magenta: '0xbb9af7'
+      cyan:    '0x7dcfff'
+      white:   '0xc0caf5'
 
-#   indexed_colors:
-#     - { index: 16, color: '0xff9e64' }
-#     - { index: 17, color: '0xdb4b4b' }
+    indexed_colors:
+      - { index: 16, color: '0xff9e64' }
+      - { index: 17, color: '0xdb4b4b' }
+
+  # Rose pine moon
+  rose-pine-moon: &rose-pine-moon
+    primary:
+      background: "0x232136"
+      foreground: "0xe0def4"
+    cursor:
+      text: "0xe0def4"
+      cursor: "0x56526e"
+    vi_mode_cursor:
+      text: "0xe0def4"
+      cursor: "0x56526e"
+    line_indicator:
+      foreground: None
+      background: None
+    selection:
+      text: "0xe0def4"
+      background: "0x44415a"
+    normal:
+      black: "0x393552"
+      red: "0xeb6f92"
+      green: "0x3e8fb0"
+      yellow: "0xf6c177"
+      blue: "0x9ccfd8"
+      magenta: "0xc4a7e7"
+      cyan: "0xea9a97"
+      white: "0xe0def4"
+    bright:
+      black: "0x6e6a86"
+      red: "0xeb6f92"
+      green: "0x3e8fb0"
+      yellow: "0xf6c177"
+      blue: "0x9ccfd8"
+      magenta: "0xc4a7e7"
+      cyan: "0xea9a97"
+      white: "0xe0def4"
+    hints:
+      start:
+        foreground: "#908caa"
+        background: "#2a273f"
+      end:
+        foreground: "#6e6a86"
+        background: "#2a273f"
+######################################################################
+## SET THEME: Choose ONE color scheme from those in the above list. ##
+## ###################################################################
+# Available themes are:
+# *catpuccin-mocha
+# *tokyo-night
+# *rose-pine-moon
+colors: *rose-pine-moon
