--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,9 +29,8 @@ bind l select-pane -R
 bind r source-file ~/.tmux.conf
 
 set-option -g default-terminal "screen-256color"
-set-option -sa terminal-features ',xterm-256color:RGB'
-# set-option -ga terminal-overrides ',xterm-256color*:Tc'
-# set-option -sa terminal-overrides ',alacritty:RGB'
+# set-option -sa terminal-features ',xterm-256color:RGB'
+set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 bind-key -T root WheelUpPane \
     if-shell -Ft= '#{?mouse_any_flag,1,#{pane_in_mode}}' \
