--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,9 +28,9 @@ bind l select-pane -R
 
 bind r source-file ~/.tmux.conf
 
-set-option -g default-terminal "screen-256color"
-# set-option -sa terminal-features ',xterm-256color:RGB'
-set-option -sa terminal-overrides ',xterm-256color:RGB'
+set-option -g default-terminal "tmux-256color"
+set-option -as terminal-features ',xterm-256color:RGB'
+# set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 bind-key -T root WheelUpPane \
     if-shell -Ft= '#{?mouse_any_flag,1,#{pane_in_mode}}' \
