--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -22,100 +22,98 @@ scrolling:
 font:
   size: 12
   # JetBrains
-  normal:
-    family: "JetBrainsMono Nerd Font"
-    style: Regular
-  bold:
-    family: "JetBrainsMono Nerd Font"
-    style: Bold
-  italic:
-    family: "JetBrainsMono Nerd Font"
-    style: Italic
-  bold_italic:
-    family: "JetBrainsMono Nerd Font"
-    style: Bold Italic
-
-  # FiraCode
   # normal:
-  #   family: "FiraCode Nerd Font Mono"
+  #   family: "JetBrainsMono Nerd Font"
   #   style: Regular
   # bold:
-  #   family: "FiraCode Nerd Font Mono"
+  #   family: "JetBrainsMono Nerd Font"
   #   style: Bold
   # italic:
-  #   family: "FiraCode Nerd Font Mono"
+  #   family: "JetBrainsMono Nerd Font"
   #   style: Italic
   # bold_italic:
-  #   family: "FiraCode Nerd Font Mono"
+  #   family: "JetBrainsMono Nerd Font"
   #   style: Bold Italic
-  
+
+  # FiraCode
+  normal:
+    family: "FiraCode Nerd Font Mono"
+    style: Regular
+  bold:
+    family: "FiraCode Nerd Font Mono"
+    style: Bold
+  italic:
+    family: "FiraCode Nerd Font Mono"
+    style: Italic
+  bold_italic:
+    family: "FiraCode Nerd Font Mono"
+    style: Bold Italic
 
 schemes:
   # Catpuccin
   catpuccin-mocha: &catpuccin-mocha
     primary:
       # background: '0x000000'
-      background: '0x1a1b26'
-      foreground: '0xc0caf5'
+      background: "0x1a1b26"
+      foreground: "0xc0caf5"
 
     # Normal colors
     normal:
-      black:   '0x15161e'
-      red:     '0xf7768e'
-      green:   '0x9ece6a'
-      yellow:  '0xe0af68'
-      blue:    '0x7aa2f7'
-      magenta: '0xbb9af7'
-      cyan:    '0x7dcfff'
-      white:   '0xa9b1d6'
+      black: "0x15161e"
+      red: "0xf7768e"
+      green: "0x9ece6a"
+      yellow: "0xe0af68"
+      blue: "0x7aa2f7"
+      magenta: "0xbb9af7"
+      cyan: "0x7dcfff"
+      white: "0xa9b1d6"
 
     # Bright colors
     bright:
-      black:   '0x414868'
-      red:     '0xf7768e'
-      green:   '0x9ece6a'
-      yellow:  '0xe0af68'
-      blue:    '0x7aa2f7'
-      magenta: '0xbb9af7'
-      cyan:    '0x7dcfff'
-      white:   '0xc0caf5'
+      black: "0x414868"
+      red: "0xf7768e"
+      green: "0x9ece6a"
+      yellow: "0xe0af68"
+      blue: "0x7aa2f7"
+      magenta: "0xbb9af7"
+      cyan: "0x7dcfff"
+      white: "0xc0caf5"
 
     indexed_colors:
-      - { index: 16, color: '0xff9e64' }
-      - { index: 17, color: '0xdb4b4b' }
+      - { index: 16, color: "0xff9e64" }
+      - { index: 17, color: "0xdb4b4b" }
 
   # TokyoNight
-  tokyo-night: &tokyo-night
-    # Default colors
+  tokyo-night: &tokyo-night # Default colors
     primary:
-      background: '0x1a1b26'
-      foreground: '0xc0caf5'
+      background: "0x1a1b26"
+      foreground: "0xc0caf5"
 
     # Normal colors
     normal:
-      black:   '0x15161E'
-      red:     '0xf7768e'
-      green:   '0x9ece6a'
-      yellow:  '0xe0af68'
-      blue:    '0x7aa2f7'
-      magenta: '0xbb9af7'
-      cyan:    '0x7dcfff'
-      white:   '0xa9b1d6'
+      black: "0x15161E"
+      red: "0xf7768e"
+      green: "0x9ece6a"
+      yellow: "0xe0af68"
+      blue: "0x7aa2f7"
+      magenta: "0xbb9af7"
+      cyan: "0x7dcfff"
+      white: "0xa9b1d6"
 
     # Bright colors
     bright:
-      black:   '0x414868'
-      red:     '0xf7768e'
-      green:   '0x9ece6a'
-      yellow:  '0xe0af68'
-      blue:    '0x7aa2f7'
-      magenta: '0xbb9af7'
-      cyan:    '0x7dcfff'
-      white:   '0xc0caf5'
+      black: "0x414868"
+      red: "0xf7768e"
+      green: "0x9ece6a"
+      yellow: "0xe0af68"
+      blue: "0x7aa2f7"
+      magenta: "0xbb9af7"
+      cyan: "0x7dcfff"
+      white: "0xc0caf5"
 
     indexed_colors:
-      - { index: 16, color: '0xff9e64' }
-      - { index: 17, color: '0xdb4b4b' }
+      - { index: 16, color: "0xff9e64" }
+      - { index: 17, color: "0xdb4b4b" }
 
   # Rose pine moon
   rose-pine-moon: &rose-pine-moon
