--- a/.config/i3/config
+++ b/.config/i3/config
@@ -41,6 +41,8 @@ exec_always --no-startup-id ~/.fehbg
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
+hide_edge_borders both
+
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
 # bindsym $mod+Return exec alacritty
