Enable copy to clipboard by mouse

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,12 +4,14 @@ bind C-a send-prefix
 
 # Vi copypaste mode
 set-window-option -g mode-keys vi
-set -s set-clipboard off
+set -s set-clipboard on
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -i -selection clipboard"
 
 # Auto-renumber windows on closing pane
 set-option -g renumber-windows on
+
+set -g mouse on
 
 # allow the title bar to adapt to whatever host you connect to
 set -g set-titles on
@@ -32,17 +34,17 @@ set-option -g default-terminal "tmux-256color"
 set-option -as terminal-features ',xterm-256color:RGB'
 # set-option -sa terminal-overrides ',xterm-256color:RGB'
 
-bind-key -T root WheelUpPane \
-    if-shell -Ft= '#{?mouse_any_flag,1,#{pane_in_mode}}' \
-        'send -Mt=' \
-        'if-shell -t= "#{?alternate_on,true,false} || echo \"#{tmux_commands_with_legacy_scroll}\" | grep -q \"#{pane_current_command}\"" \
-            "send -t= Up" "copy-mode -et="'
+# bind-key -T root WheelUpPane \
+#     if-shell -Ft= '#{?mouse_any_flag,1,#{pane_in_mode}}' \
+#         'send -Mt=' \
+#         'if-shell -t= "#{?alternate_on,true,false} || echo \"#{tmux_commands_with_legacy_scroll}\" | grep -q \"#{pane_current_command}\"" \
+#             "send -t= Up" "copy-mode -et="'
 
-bind-key -T root WheelDownPane \
-    if-shell -Ft = '#{?pane_in_mode,1,#{mouse_any_flag}}' \
-        'send -Mt=' \
-        'if-shell -t= "#{?alternate_on,true,false} || echo \"#{tmux_commands_with_legacy_scroll}\" | grep -q \"#{pane_current_command}\"" \
-            "send -t= Down" "send -Mt="'
+# bind-key -T root WheelDownPane \
+#     if-shell -Ft = '#{?pane_in_mode,1,#{mouse_any_flag}}' \
+#         'send -Mt=' \
+#         'if-shell -t= "#{?alternate_on,true,false} || echo \"#{tmux_commands_with_legacy_scroll}\" | grep -q \"#{pane_current_command}\"" \
+#             "send -t= Down" "send -Mt="'
 
 # rebind splitting windows
 unbind-key %
