--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -21,6 +21,9 @@ scrolling:
 # Font Customization
 font:
   size: 12
+  offset:
+    x: 0    # For letter spacing (default: 0).
+    y: 3    # For line spacing (default: 0).
   # JetBrains
   # normal:
   #   family: "JetBrainsMono Nerd Font"
