--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -3,6 +3,7 @@ include themes/rose-pine.conf
 background_opacity 0.8
 hide_window_decorations yes
 window_padding_width 1
+cursor none
 
 font_size 12.0
 disable_ligatures never
