--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -4,6 +4,7 @@ background_opacity 0.8
 hide_window_decorations yes
 window_padding_width 1
 cursor none
+cursor_blink_interval 0
 
 font_size 12.0
 disable_ligatures never
