Fix truecolor tmux alacritty

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -30,9 +30,8 @@ bind l select-pane -R
 
 bind r source-file ~/.tmux.conf
 
-set-option -g default-terminal "tmux-256color"
-set-option -as terminal-features ',xterm-256color:RGB'
-# set-option -sa terminal-overrides ',xterm-256color:RGB'
+set -g default-terminal "$TERM"
+set -ag terminal-overrides ",$TERM:Tc"
 
 # bind-key -T root WheelUpPane \
 #     if-shell -Ft= '#{?mouse_any_flag,1,#{pane_in_mode}}' \
