--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -11,7 +11,7 @@ bind -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -i -selection clipboa
 # Auto-renumber windows on closing pane
 set-option -g renumber-windows on
 
-set -g mouse on
+set-option -g mouse on
 
 # allow the title bar to adapt to whatever host you connect to
 set -g set-titles on
@@ -30,20 +30,8 @@ bind l select-pane -R
 
 bind r source-file ~/.tmux.conf
 
-set -g default-terminal "$TERM"
-set -ag terminal-overrides ",$TERM:Tc"
-
-# bind-key -T root WheelUpPane \
-#     if-shell -Ft= '#{?mouse_any_flag,1,#{pane_in_mode}}' \
-#         'send -Mt=' \
-#         'if-shell -t= "#{?alternate_on,true,false} || echo \"#{tmux_commands_with_legacy_scroll}\" | grep -q \"#{pane_current_command}\"" \
-#             "send -t= Up" "copy-mode -et="'
-
-# bind-key -T root WheelDownPane \
-#     if-shell -Ft = '#{?pane_in_mode,1,#{mouse_any_flag}}' \
-#         'send -Mt=' \
-#         'if-shell -t= "#{?alternate_on,true,false} || echo \"#{tmux_commands_with_legacy_scroll}\" | grep -q \"#{pane_current_command}\"" \
-#             "send -t= Down" "send -Mt="'
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",xterm-256color*:Tc"
 
 # rebind splitting windows
 unbind-key %
@@ -58,10 +46,3 @@ bind -r C-h resize-pane -L 5
 bind -r C-l resize-pane -R 5
 
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
-
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
