feat: minor update

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -24,6 +24,8 @@ set -g base-index 1
 set -s escape-time 2
 set -g status-left-length 20
 
+set -g history-limit 10000
+
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
