chore(kitty): change bg oppacity and padding

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,8 +1,6 @@
-include themes/dracula.conf
-
-background_opacity 0.8
+background_opacity 0.6
 hide_window_decorations yes
-window_padding_width 1
+window_padding_width 6 4
 cursor_blink_interval 0
 
 font_size 11.0
@@ -11,3 +9,9 @@ font_family      JetBrainsMono Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
+
+
+# BEGIN_KITTY_THEME
+# Solarized Dark Higher Contrast
+# include current-theme.conf
+# END_KITTY_THEME
